fix z-index of menu

--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ i {
 	border-top-right-radius: 20px;
 	top: calc((100vh /2) - (60px /2));
 	left: 0;
-	z-index: 2;
+	z-index: 3;
 	-webkit-transition: left 0.2s, color 0.2s;
 	transition: left 0.2s, color 0.2s;
 }
@@ -45,7 +45,7 @@ i {
 	background: #222;
 	left: -160px;
 	top: 0;
-	z-index: 2;
+	z-index: 3;
 	-webkit-transition: left 0.2s;
 	transition: left 0.2s;
 }
